k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wallet-netpol
  labels:
    app: wallet
spec:
  podSelector:
    matchLabels:
      app: wallet
  policyTypes: ["Ingress","Egress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              istio-injection: enabled
        - podSelector:
            matchLabels:
              app: risk-control
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 443
